--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
+    "less-loader": "6",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
