--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@babel/core": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "less-loader": "6",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
